fix(dikweb): fix body layout not fully covered in mobile

--- a/dikweb/styles/globals.css
+++ b/dikweb/styles/globals.css
@@ -7,6 +7,7 @@ body {
 	background: var(--background);
 	padding: 0;
 	margin: 0;
+	width: fit-content;
 	min-height: 100vh;
 	font-family: var(--font-family);
 }
